[package]
name = "eth-signature-verifier"
description = "Universal Etheruem signature verification with ERC-6492"
version = "0.3.7"
edition = "2021"
authors = ["Royal Engineering", "cassonmars"]
license = "MIT"

[dependencies]
alloy-transport = "0.8.0"
alloy-dyn-abi = { version = "0.8.15", features = ["eip712"] }
alloy-rlp = "0.3.9"
alloy-transport-http = "0.8.0"
alloy-sol-types = { version = "0.8.15", features = ["json"] }
alloy-signer = "0.8.0"
alloy-signer-local = "0.8.0"
alloy-provider = "0.8.0"
alloy-json-rpc = "0.8.0"
alloy-rpc-types = "0.8.0"
alloy-primitives = "0.8.14"
alloy-contract = "0.8.0"
log = "0.4"
thiserror = "1.0.63"

[dev-dependencies]
alloy-node-bindings = "0.8"
rand = "0.8"
env_logger = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["test-util", "macros", "process"] }

[build-dependencies]
alloy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
